--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <img class="logo" src="logo.png" >
 
-            <input class="search-tag" type="search" placeholder="Seach">
+            <input class="search-tag" type="search" placeholder="Search">
 
             <ul class="link-main">
                 <li class="link-master">
